--- a/src/components/certification/certificationhero/hero.css
+++ b/src/components/certification/certificationhero/hero.css
@@ -82,4 +82,10 @@
   .certification_hero {
     height: 400px;
   }
+  .educationbgimage {
+    height: 400px;
+  }
+  .skillsslider {
+    height: 400px;
+  }
 }
