--- a/src/components/certification/skills/skills.css
+++ b/src/components/certification/skills/skills.css
@@ -46,3 +46,8 @@
 .skills_main {
   background-image: linear-gradient(white, rgb(136, 136, 241));
 }
+@media (max-width: 640px) {
+  .container1 {
+    width: 400px;
+  }
+}
